kubernetes.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dvorak-tg90nor-net
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: dvorak-tg90nor-net
    spec:
      containers:
        - name: dvorak-sinatra
          image: gcr.io/crewpicker/dvorak-tg90nor-net:3
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            periodSeconds: 2
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 128Mi
        - name: dvorak-nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: dvorak-nginx-conf-volume
            - mountPath: /app/public
              name: dvorak-static-data
          resources:
            requests:
              cpu: 30m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 32Mi
      volumes:
        - name: dvorak-nginx-conf-volume
          configMap:
            name: dvorak-nginx-conf
        - name: dvorak-static-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: dvorak-sinatra
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: NodePort
  selector:
    app: dvorak-tg90nor-net
---
apiVersion: v1
kind: Service
metadata:
  name: dvorak-nginx
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
  selector:
    app: dvorak-tg90nor-net
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dvorak-tg90nor-net-https
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - dvorak.tg90nor.net
    secretName: dvorak-tls
  rules:
  - host: dvorak.tg90nor.net
    http:
      paths:
      - path: /downloads/*
        backend:
          serviceName: dvorak-nginx
          servicePort: 80
      - path: /images/*
        backend:
          serviceName: dvorak-nginx
          servicePort: 80
      - path: /*
        backend:
          serviceName: dvorak-sinatra
          servicePort: 80
